--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>St.Berners-Lee Basilica</title>
+
+    <meta property="og:title" content="St.Berners-Lee Basilica">
+    <meta property="og:description" content="The Internet Church">
+    <meta property="og:url" content="https://my12parsecs.github.io/st.berners-lee-basilica/">
+    <meta property="og:image" content="https://ohiostate.pressbooks.pub/app/uploads/sites/198/2019/06/axis.jpg">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@YourTwitterHandle">
+    <meta name="twitter:creator" content="@YourTwitterHandle">
+    <meta name="twitter:title" content="St.Berners-Lee Basilica">
+    <meta name="twitter:description" content="The Internet Church">
+    <meta name="twitter:image" content="https://ohiostate.pressbooks.pub/app/uploads/sites/198/2019/06/axis.jpg">
+    <meta name="twitter:url" content="https://my12parsecs.github.io/st.berners-lee-basilica/">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -19,10 +37,22 @@
 
             <div class="audio-button" id="play">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Waxseal.png" alt="" class="seal-image">
-                <img src="https://static.vecteezy.com/system/resources/previews/014/396/445/original/comic-style-triangle-play-icon-with-transparent-background-file-free-png.png" alt="" class="triangle-image">
+                <img src="https://static.vecteezy.com/system/resources/previews/027/508/193/original/pause-button-icon-on-transparent-background-stop-icon-button-free-png.png" alt="" id="play-pause" class="pause-image">
             </div>
             <input type="range" id="volume" name="volume" min="0" max="1" step="0.01" value="0.2" oninput="changeVolume()" class="volume-slider">
         </div>
+
+        <div class="donate">
+            <a href="https://www.buymeacoffee.com/donewstuff" target="_blank" rel="nofollow noopener noreferrer" class="donate-link">
+                <p class="donate-button">Donate</p>
+                <img src="./image/parchment.png" alt="" class="parchment">
+            </a>
+            <a href="https://twitter.com/intent/tweet?url=https://my12parsecs.github.io/st.berners-lee-basilica/&text=St.Berners-Lee Basilica, The Internet Church" target="_blank" rel="nofollow noopener noreferrer" class="donate-link">
+                <p class="donate-button">Spread the Word</p>
+                <img src="./image/parchment.png" alt="" class="parchment">
+            </a>
+        </div>
+
     </div>
     
 
